@@ -116,6 +116,9 @@
 	Fixed UTF8 <-> UTF16 conversion on Windows, which didn't always work (on
 	surrogate characters it seems).  Thanks to Reva Revadigar.
 
+	Fixed possible unexpectedly long timeouts when waiting for a key on
+	Windows (due to limitation of pdcurses).
+
 0.8.1 to 0.8.1a
 
 	Added c key to menus that inserts parts of menu line into command-line.
